# fftune

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
assets/: fftune-config.cmake  fftune-config.cmake.in  fftune.pc.in  libfftune.pc.in
doc/: Doxyfile
doc/man/man1/: audio-to-midi.1
examples/: README.md
examples/basic/: CMakeLists.txt  README.md
examples/basic/src/: main.cpp
examples/cmake/: CMakeLists.txt  README.md
examples/fetchcontent/: CMakeLists.txt  README.md
examples/fetchcontent/src/: main.cpp
examples/minimal/: CMakeLists.txt  README.md
examples/minimal/src/: main.cpp
examples/pipewire-realtime/: CMakeLists.txt  README.md
examples/pipewire-realtime/src/: main.cpp
scripts/: build.sh  format-code.sh
src/: config.cpp  config.hpp  fftune.cpp  fftune.hpp  sample_buffer.cpp  sample_buffer.hpp  tone_generator.cpp  tone_generator.hpp  version.cpp  version.hpp
src/fft/: bin.cpp  bin.hpp  fft.cpp  fft.hpp  window.cpp  window.hpp
src/io/: audio_file.cpp  audio_file.hpp  midi_file.cpp  midi_file.hpp  virt_file.cpp  virt_file.hpp
src/pitch/: double_fft.cpp  double_fft.hpp  fast_comb.cpp  fast_comb.hpp  fftune_sfizz.cpp  fftune_sfizz.hpp  fftune_spectral.cpp  fftune_spectral.hpp  pitch.cpp  pitch.hpp  pitch_detector.cpp  pitch_detector.hpp  schmitt_trigger.cpp  schmitt_trigger.hpp  yin.cpp  yin.hpp  yin_patient.cpp  yin_patient.hpp
src/util/: music.cpp  music.hpp  util.cpp  util.hpp
tests/: CMakeLists.txt  README.md  fft_test.cpp  general_test.cpp  pitch.cpp  pitch_detector_test.cpp  pitch_test.cpp  sample_buffer_test.cpp  tests.hpp
tools/: CMakeLists.txt
tools/audio-to-midi/: main.cpp
